# nexide

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  compat_report.yml  config.yml  feature_request.yml
.github/rulesets/: feature-branches.json  main-protection.json  tag-releases.json
.github/workflows/: ci.yml  release.yml
crates/nexide/: Cargo.toml  build.rs
crates/nexide-bench/: Cargo.toml
crates/nexide-bench/docker/deno/: Dockerfile
crates/nexide-bench/docker/nexide/: Dockerfile
crates/nexide-bench/docker/node/: Dockerfile
crates/nexide-bench/src/: docker.rs  lib.rs  load.rs  main.rs  report.rs  runner.rs  sample.rs  target.rs
crates/nexide-e2e/: Cargo.toml
crates/nexide-e2e/src/: lib.rs
crates/nexide-e2e/tests/: i18n.rs  next_e2e.rs  prisma_sqlite.rs  runtime_smoke.rs
crates/nexide/runtime/polyfills/: async_local_storage.js  buffer.js  cjs_loader.js  console.js  http_bridge.js  late_globals.js  nexide_bridge.js  process.js  timers.js  v8_core_shim.js  web_apis.js
crates/nexide/runtime/polyfills/node/: assert.js  assert_strict.js  async_hooks.js  buffer.js  child_process.js  console.js  constants.js  crypto.js  diagnostics_channel.js  dns.js  dns_promises.js  events.js  fs-promises.js  fs.js  http.js  http2.js  https.js  inspector.js  module.js  net.js  os.js  path.js  path_posix.js  path_win32.js  perf_hooks.js  process.js  punycode.js  querystring.js  readline.js  readline_promises.js  stream.js  stream_consumers.js  stream_promises.js  stream_web.js  string_decoder.js  timers.js  timers_promises.js  tls.js  tty.js  url.js  (+6 more)
crates/nexide/src/: cli.rs  entrypoint.rs  lib.rs  main.rs
crates/nexide/src/diagnostics/: contention.rs  mod.rs
crates/nexide/src/dispatch/: dispatcher.rs  errors.rs  mod.rs
crates/nexide/src/engine/: code_cache.rs  errors.rs  heap_config.rs  isolate.rs  mod.rs
crates/nexide/src/engine/cjs/: builtins.rs  errors.rs  mod.rs  registry.rs  resolver.rs
crates/nexide/src/engine/v8_engine/: async_ops.rs  bootstrap.rs  bridge.rs  engine.rs  esm.rs  handle_table.rs  mod.rs  modules.rs  ops_bridge.rs
crates/nexide/src/image/: cache.rs  config.rs  glob.rs  handler.rs  memory.rs  mod.rs  pipeline.rs
crates/nexide/src/napi/: async_work.rs  bindings.rs  callbacks.rs  env.rs  loader.rs  mod.rs  references.rs  threadsafe.rs  types.rs
crates/nexide/src/ops/: dispatch_table.rs  dns.rs  fs_sync.rs  http_client.rs  log.rs  mod.rs  net.rs  process.rs  process_spawn.rs  queue.rs  request.rs  response.rs  signals.rs  tls.rs  upgrade_socket.rs  zlib_stream.rs
crates/nexide/src/pool/: engine_pump.rs  idle_shrink.rs  isolate_pool.rs  isolate_worker.rs  local_isolate_worker.rs  local_pool.rs  mem_sampler.rs  mod.rs  pump_strategy.rs  recycle.rs  worker.rs
crates/nexide/src/server/: accept_loop.rs  config.rs  error_page.rs  fallback.rs  mod.rs  next_bridge.rs  prerender.rs  static_assets.rs  static_ram_cache.rs  stream_listener.rs  worker_runtime.rs
crates/nexide/tests/: async_local_storage.rs  cjs_loader.rs  code_cache_roundtrip.rs  engine_boot.rs  esm_dynamic_import.rs  http_real.rs  napi_async_smoke.rs  napi_buffer_smoke.rs  napi_function_smoke.rs  napi_references_smoke.rs  napi_smoke.rs  napi_threadsafe_smoke.rs  next_bridge.rs  node_builtins.rs  node_child_process.rs  node_crypto_extra.rs  node_crypto_keys.rs  node_dns.rs  node_globals.rs  node_http_client.rs  node_http_upgrade.rs  node_io.rs  node_net.rs  node_polyfills_extra.rs  node_zlib_stream.rs  op_roundtrip.rs  pool.rs  pump_error_path.rs  timers.rs  wasm_smoke.rs
crates/nexide/tests/fixtures/: op_roundtrip_handler.mjs  pump_error_handler.mjs
crates/nexide/tests/fixtures/builtins/: entry.mjs
crates/nexide/tests/fixtures/cjs/: counter.cjs  cyc_a.cjs  cyc_b.cjs  data.json  entry.mjs  meta.cjs  smoke.cjs
crates/nexide/tests/fixtures/globals/: entry.mjs
docs/: known-limitations.md
e2e/: README.md
e2e/i18n/: README.md  i18nConfig.ts  middleware.ts  package.json  pnpm-lock.yaml
e2e/i18n/app/: i18n.ts
e2e/i18n/app/[lang]/: layout.tsx  page.tsx
e2e/i18n/app/[lang]/intl/: page.tsx
e2e/i18n/app/[lang]/static/: page.tsx
e2e/i18n/app/[lang]/utf8/: page.tsx
e2e/i18n/app/api/format/: route.ts
e2e/i18n/app/api/ping/: route.ts
e2e/i18n/locales/en/: common.json
e2e/i18n/locales/pl/: common.json
e2e/next-fixture/: README.md  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.mjs  vitest.config.ts
e2e/next-fixture/app/: not-found.tsx
e2e/next-fixture/app/api/echo/: route.ts
e2e/next-fixture/app/api/headers/: route.ts
e2e/next-fixture/app/api/ping/: route.test.ts  route.ts
e2e/next-fixture/app/api/time/: route.ts
e2e/next-fixture/app/forms/: page.tsx
e2e/next-fixture/app/posts/: _data.ts
e2e/next-fixture/app/posts/[slug]/: page.tsx
e2e/next-fixture/app/users/: page.tsx
e2e/prisma-sqlite/: .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml
e2e/prisma-sqlite/app/: db.ts  layout.tsx  page.tsx
e2e/prisma-sqlite/app/api/ping/: route.ts
e2e/prisma-sqlite/app/api/users/: route.ts
e2e/prisma-sqlite/prisma/: schema.prisma  seed.ts
e2e/prisma-sqlite/prisma/migrations/20240101000000_init/: migration.sql
example/: README.md  package-lock.json  package.json  pnpm-lock.yaml
example/app/: globals.css  layout.tsx  page.tsx
example/app/about/: page.tsx
example/app/image-bench/: page.tsx
example/app/posts/: page.tsx
example/app/posts/[slug]/: page.tsx
example/app/users/: _data.ts  page.tsx
example/app/users/[id]/: page.tsx
example/components/: counter.tsx  echo-form.tsx
example/public/: static-sample.txt
