[workspace]
resolver = "3"
members = [
    "crates/nexide",
    "crates/nexide-bench",
    "crates/nexide-e2e",
]

[workspace.package]
version = "0.1.13"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[workspace.lints.rust]
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_mut = "deny"
unreachable_code = "deny"
unreachable_pub = "deny"
missing_docs = "deny"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
# Correctness, performance, complexity, suspicious - all enforced by clippy default.
# Pedantic and nursery are opinionated style lints; they are advisory rather than
# enforced. Keeping them at `allow` avoids per-file blanket suppressions while still
# letting individual modules opt into stricter checks via `#[warn(...)]` if useful.
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
module_name_repetitions = "allow"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "sync", "time", "process", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
sysinfo = "0.38"
comfy-table = "7"
hdrhistogram = "7"
futures = "0.3"
hickory-resolver = { version = "0.24", default-features = false, features = ["tokio-runtime", "system-config"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
webpki-roots = "1.0"
flate2 = "1"
nexide = { path = "crates/nexide" }
