[package]
name = "nexide-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "End-to-end tests for nexide running real Next.js standalone bundles"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
nexide = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util"] }
tracing = { workspace = true }

[dev-dependencies]
nexide = { workspace = true }
reqwest = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["process", "io-util", "test-util"] }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
